--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,6 @@ APP_DEBUG = true
 DB_CONNECTION = "mysql"
 DB_HOST = "localhost"
 DB_DATABASE = "debut"
-DB_USERNAME = "debut-user"
-DB_PASSWORD = "123"
+DB_USERNAME = "debut_user"
+DB_PASSWORD = "secret"
 DB_CHARSET = "utf8"
