--- a/config.ini.example
+++ b/config.ini.example
@@ -5,6 +5,6 @@ APP_DEBUG = true
 DB_CONNECTION = "mysql"
 DB_HOST = "localhost"
 DB_DATABASE = "debut"
-DB_USERNAME = "debut_user"
-DB_PASSWORD = "secret"
+DB_USERNAME = "root"
+DB_PASSWORD = "123"
 DB_CHARSET = "utf8"
