--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "twig/twig": "~1.0",
-        "twig/extensions": "^1.4"
+        "twig/extensions": "^1.4",
+        "doctrine/dbal": "v2.5.5"
     },
     "autoload": {
         "psr-4": {
