--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "twig/twig": "~1.0",
         "twig/extensions": "^1.4",
         "doctrine/dbal": "2.5.*",
-        "doctrine/migrations": "v1.4.1"
+        "doctrine/migrations": "1.4.*",
+        "fzaninotto/faker": "1.6.*"
     },
     "autoload": {
         "classmap": [
