--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "twig/twig": "~1.0",
         "twig/extensions": "^1.4",
-        "doctrine/dbal": "2.5.*"
+        "doctrine/dbal": "2.5.*",
+        "fzaninotto/faker": "^1.6"
     },
     "autoload": {
         "psr-4": {
